--- a/app/components/service/service.yaml
+++ b/app/components/service/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: staging
+  namespace: ggg
   name: service
   labels:
     service_type: service
