--- a/app/overlays/deployment.yaml
+++ b/app/overlays/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  namespace: staging
+  namespace: ggg
   name: ggg
   labels:
     service_type: testing
