testing with resource

--- a/app/overlays/app4/staging/kustomization.yaml
+++ b/app/overlays/app4/staging/kustomization.yaml
@@ -3,6 +3,8 @@ bases:
   - ../../../components/secret
   - ../../../components/deployment
 
+resources:
+
 patches:
   - patch: |-
       - op: replace
