add ENV from vault to nginx

--- a/app/overlays/app4/staging/deployment.yaml
+++ b/app/overlays/app4/staging/deployment.yaml
@@ -17,3 +17,9 @@ spec:
           image: nginx
           ports:
             - containerPort: 80
+          env:
+          - name: MESSAGE
+            valueFrom:
+              secretKeyRef:
+                name: message-from-vault
+                key: message
