--- a/app/overlays/app4/staging/deployment.yaml
+++ b/app/overlays/app4/staging/deployment.yaml
@@ -6,7 +6,7 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: webserver
+      service_name: app4-staging
   template:
     metadata:
       labels:
