change domain to gbesar

--- a/app/overlays/app1/staging/kustomization.yaml
+++ b/app/overlays/app1/staging/kustomization.yaml
@@ -71,7 +71,7 @@ patches:
         value: ggg
       - op: replace
         path: /spec/rules/0/host
-        value: app1.app.adaptivenetworklab.org
+        value: app1.link2.gbesar.link
       - op: replace
         path: /spec/rules/0/http/paths/0/backend/service/name
         value: app1
