--- a/app/overlays/app1/staging/deployment.yaml
+++ b/app/overlays/app1/staging/deployment.yaml
@@ -20,7 +20,7 @@ spec:
       serviceAccountName: app1
       containers:
       - name: app1
-        image: registry.adaptivenetlab.site/testing/app1:1c0f377
+        image: registry.gbesar.link/testing/app1:1c0f377
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 80
