--- a/app/overlays/app2/prod/kustomization.yaml
+++ b/app/overlays/app2/prod/kustomization.yaml
@@ -45,7 +45,7 @@ patches:
         value: ggg
       - op: replace
         path: /spec/rules/0/host
-        value: app2-prod.app.adaptivenetworklab.org
+        value: app2-prod.app.gbesar.link
       - op: replace
         path: /spec/rules/0/http/paths/0/backend/service/name
         value: app2-prod
