--- a/app/overlays/app3/prod/kustomization.yaml
+++ b/app/overlays/app3/prod/kustomization.yaml
@@ -45,7 +45,7 @@ patches:
         value: ggg
       - op: replace
         path: /spec/rules/0/host
-        value: app3-prod.link2.gbesar.link
+        value: app3-prod.app.gbesar.link
       - op: replace
         path: /spec/rules/0/http/paths/0/backend/service/name
         value: app3-prod
