--- a/app/overlays/app4/staging/kustomization.yaml
+++ b/app/overlays/app4/staging/kustomization.yaml
@@ -74,7 +74,7 @@ patches:
         value: ggg
       - op: replace
         path: /spec/rules/0/host
-        value: app4-staging.link2.gbesar.link
+        value: app4-staging.app.gbesar.link
       - op: replace
         path: /spec/rules/0/http/paths/0/backend/service/name
         value: app4-staging
