--- a/app/components/service/ingress.yaml
+++ b/app/components/service/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   namespace: ggg
   name: ggg-ing-org
   annotations:
-    kubernetes.io/ingress.class: adaptive-gateway
+    kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   rules:
